# Mental-Math-Trainer

./: CMakeLists.txt  README.md  README_revised.md  design_revised.md
include/adaptive_math/core/: AdaptiveSelector.h  DifficultyLevel.h  IQuestionGenerator.h  Operation.h  PersonalRecord.h  Question.h  Session.h  SkillDAG.h  SkillID.h  SkillManager.h  SkillStats.h
include/adaptive_math/persistence/: Persistence.h
include/adaptive_math/statistics/: Statistics.h
include/adaptive_math/ui/: TerminalUI.h
src/: main.cpp
src/core/: AdaptiveSelector.cpp  Session.cpp  SkillDAG.cpp  SkillManager.cpp
src/generators/: BasicAdditionGenerator.h  BasicSubtractionGenerator.h  BorrowSubtractionGenerator.h  CarryAdditionGenerator.h  ExactDivisionGenerator.h  LargerDivisionGenerator.h  LargerMultiplicationGenerator.h  TablesMultiplicationGenerator.h
src/persistence/: Persistence.cpp
src/statistics/: Statistics.cpp
src/ui/: TerminalUI.cpp
